# template-doc

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .trivyignore.yaml  CHANGELOG.md  Dockerfile  README.md  cahier-des-charges.md  noxfile.md  noxfile.py  pyproject.toml  template-projet.md  vscode-extension.md
.github/workflows/: cd.yaml  ci.yaml  cicd.yaml  quality.yaml
markdown/: adr-trivyignore-expiry-check.md  project-template.md  python-docker-cicd-template.md  requirements-specification.md  vscode-extensions.md
scripts/: check-trivyignore-expiry.sh
src/template_doc/: cli.py  settings.py
template_doc/: __init__.py  cli.py  observability.py  settings.py
tests/: test_cli.py  test_env_example.py  test_observability.py  test_packaging.py  test_quality_config.py  test_settings.py
