[project]
name = "template-doc"
version = "0.1.0"
description = "Personal Python project template."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Template Maintainers" },
]
keywords = [
    "ci-cd",
    "docker",
    "python",
    "template",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/CHANGE_ME/template-doc"
Repository = "https://github.com/CHANGE_ME/template-doc"
Issues = "https://github.com/CHANGE_ME/template-doc/issues"

[project.scripts]
template-doc = "template_doc.cli:main"

[dependency-groups]
dev = [
    "nox[uv]>=2025.5.1",
    "pip-audit>=2.7.0",
    "pre-commit>=4.0.0",
]
format = [
    "ruff>=0.9.0",
]
lint = [
    "ruff>=0.9.0",
]
typing = [
    "mypy>=1.13.0",
    "typing-extensions>=4.12.0",
]
test = [
    "coverage[toml]>=7.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["template_doc"]

[tool.hatch.build.targets.sdist]
include = [
    "template_doc",
    "LICENSE",
    "README.md",
    "pyproject.toml",
]

[tool.uv]
default-groups = []

[tool.ruff]
line-length = 120
preview = true
target-version = "py312"
extend-exclude = [
    ".git",
    ".mypy_cache",
    ".nox",
    ".pytest_cache",
    ".venv",
    "dist",
    "build",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
check_untyped_defs = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
